assets/css/_buttonwall.css
/* Button wall */
.buttonwall {
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
  gap: 1px;
  list-style-type: none;
  padding: 0;
  margin: 0 0 2rem
}

.buttonwall.--highcontrast .buttonwall__item {
  background: var(--bg) !important;
  color: var(--text) !important;
  box-shadow: inset 0 0 0 1px var(--text) !important;
  text-decoration: underline !important
}

.buttonwall__image img {
    display: block;
}

.buttonwall__item a {
  width: 80px;
  height: 31px;
  background: #fff;
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
  transition: transform .4s;
  overflow: hidden;
  word-break: break-word;
  padding: 0 4px;
  text-decoration: none;
  font-weight: 700;
  font-size: 12px;
  line-height: 1.1
}

.buttonwall__item a:active,
.buttonwall__item a:focus,
.buttonwall__item a:hover {
  text-decoration: none;
  z-index: 1;
}

